--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 		<h2>星际旅行计算器</h2>
 		<h4>适用于传统核聚变推进方式</h4>
 		<p>
-			巡航速度：<input type="number" v-model.number="cruiseS">空间节
-			加速次数：<input type="number" v-model.number="accTime">次
-			燃料效率：<input type="number" v-model.number="effFual">%
+			巡航速度：<input type="number" v-model.number="cruiseS"> 空间节
+			加速次数：<input type="number" v-model.number="accTime"> 次
+			燃料效率：<input type="number" v-model.number="effFual"> %
 			<br/>
-			载荷质量：<input type="number" v-model.number="mass1">t
+			载荷质量：<input type="number" v-model.number="mass1"> t
 			<br/>
-			加速度：<input type="number" v-model.number="acc">m/s^2
+			加 速 度：<input type="number" v-model.number="acc"> m/s^2
 			<br/>
-			目标距离：<input type="number" v-model.number="disGoal">au
+			目标距离：<input type="number" v-model.number="disGoal"> au
 		</p>
 		<p>
 			燃料/载荷比：{{ fualmass1 }}%
@@ -193,7 +193,7 @@
 		<ul>
 			<li v-for="(unitVo,index) in unitsVo">
 				<input type="number" v-model.number="unitVo.quantity">
-				<button v-on:click="unitTr(index,unitsVo)">
+				<button v-on:click="unitTr2(index,unitsVo)">
 					转换
 				</button>
 				{{ unitVo.name }}
@@ -237,7 +237,7 @@
 					],
 				unitsE:[
 					{name:'焦耳(J)',rate:1,quantity:0},
-					{name:'标准聚变燃料(sff)',rate:0.01*299792458*299792458,quantity:0},
+					{name:'标准聚变燃料(sff)',rate:0.00712*299792458*299792458,quantity:0},
 					{name:'千瓦时(kw/h)',rate:3600000,quantity:0},
 					{name:'TNT当量(t)',rate:4.184e9,quantity:0},
 					{name:'标准煤(t)',rate:29.3076*1e9,quantity:0},//标准煤数据来源https://wenku.baidu.com/view/5220bfe585868762caaedd3383c4bb4cf7ecb796.html
@@ -250,6 +250,14 @@
 					for(var i=0;i<units.length;i++){
 						//console.log(i);
 						units[i].quantity=units[0].quantity/units[i].rate;
+					}
+				},
+				unitTr2:function(index,units){
+					if(index==0){
+						units[1].quantity=Math.pow(units[0].quantity,1/3)*units[1].rate;
+					}
+					else if(index==1){
+						units[0].quantity=Math.pow(units[1].quantity/units[1].rate,3);
 					}
 				}
 			}
