修改帮助连接

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div id="travel">
 		<h2>行星际航行计算器</h2>
-		<p><a href="http://wiki.23shiji.net/wiki/index.php/23%E4%B8%96%E7%BA%AA%E7%A9%BA%E9%97%B4%E8%88%AA%E8%A1%8C%E8%AE%A1%E7%AE%97%E5%99%A8">帮助文档</a></p>
+		<p><a href="http://wiki.23shiji.net/wiki/index.php/帮助:23世纪空间航行计算器">帮助文档</a></p>
 		<p>
 			巡航速度：<input type="number" v-model.number="cruiseS"> 空间节
 			加速次数：<input type="number" v-model.number="accTime"> 次
