修改文字错误

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					],
 				unitsE:[
 					{name:'焦耳(J)',rate:1,quantity:0},
-					{name:'标准聚变燃料(t)',rate:0.007*299792458*299792458,quantity:0},
+					{name:'标准聚变燃料(kg)',rate:0.007*299792458*299792458,quantity:0},
 					{name:'千瓦时(kw/h)',rate:3600000,quantity:0},
 					{name:'TNT当量(t)',rate:4.184e9,quantity:0},
 					{name:'标准石油(t)',rate:41.868*1e9,quantity:0},//https://baike.baidu.com/item/%E5%90%A8%E6%B2%B9%E5%BD%93%E9%87%8F/15580955
